--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 		<h3>sketch 1</h3>
 		<img width="50%" height="auto" src="image1.jpg">
 		<h3>sketch 2</h3>
+		<p>Draw with your mouse!</p>
 		<iframe width="400" height="400" src="https://editor.p5js.org/mhr1234/full/fh8y78Ryy"></iframe>
 		<h3>sketch 3</h3>
+		<p>Move the shapes with your mouse!</p>
 		<iframe width="710" height ="400"src="https://editor.p5js.org/mhr1234/full/6PpfQjad_"></iframe>
 	</div>
 
